k8s/eks-demo-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eks-demo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eks-demo
  template:
    metadata:
      labels:
        app: eks-demo
    spec:
      containers:
        - name: eks-demo
          image: 961014738960.dkr.ecr.ap-northeast-1.amazonaws.com/eks-test
---
apiVersion: v1
kind: Service
metadata:
  name: eks-demo-srv
spec:
  selector:
    app: eks-demo
  ports:
    - name: eks-demo
      protocol: TCP
      port: 8080
      targetPort: 80
