k8s/ingress-srv.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    # プロダクションのdomain name!
    - host: www.tulipgumi.xyz
      http:
        paths:
          # ingress-nginxは、上からマッチするルートが選ばれる
          - path: /api/?(.*)
            backend:
              serviceName: api-srv
              servicePort: 8081
          - path: /?(.*)
            backend:
              serviceName: eks-demo-srv
              servicePort: 8080
